tests/ui/ices.stderr
error: cannot find macro `fubar!` in this scope
 --> $DIR/ices.rs:3:1
  |
3 | fubar!();
  | ^^^^^

error: aborting due to previous error(s)

