tests/ui/ices.rs

// this used to ICE
fubar!();

fn main() {}
